# PalmMind_task

./: .gitignore  README.md  client.py  main.py  pyproject.toml  requirements.txt  server.py  server_config.json
palmmind_resources/company/: about_palmmind.md  company_history_milestones.md  company_mission_values.md  company_stats_achievements.md  team_expertise.md
palmmind_resources/services/: customer_experience_agents.md  internal_ai_agents.md  service_overview.md  workflow_automations_agents.md
palmmind_resources/testimonials/: client_testimonials.md  success_metrics.md  testimonial_analysis.md
